# game_chess

./: Cargo.toml
module/cui/: Cargo.toml
module/cui/src/: main.rs
module/multiplayer/: Cargo.toml  build.rs
module/multiplayer/proto/: chess_game.proto
module/multiplayer/src/: lib.rs
module/server/: Cargo.toml
module/server/src/: rpc_server.rs
module/server/src/store/: memory.rs  mod.rs
sample/simple_multiplayer/checkers_client/: Cargo.toml
sample/simple_multiplayer/checkers_server/: Cargo.toml
sample/simple_multiplayer/checkers_server/src/: api.rs  app.rs  game_store.rs  lib.rs  main.rs  types.rs
