[package]
name = "checkers_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
actix-web = "4.0.0-beta.9"
actix-cors = "0.6.0-beta.2"
serde = "1.0.134"
serde_json = "1.0.59"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
